# my_python_ros2_pkg

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.cfg
src/my_python_ros2_pkg/nodes/: first_script.py  second_script.py
