<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
    <name>my_python_ros2_pkg</name>
    <version>0.1.0</version>
    <description>This Package.</description>

    <maintainer email="me@me.com">Me</maintainer>

    <license>MIT</license>

    <author email="me@me.com">Me</author>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>