[metadata]
name = my_python_ros2_pkg
version = 0.1.0
author = me
author_email = me@me.com
description = Interface
license = MIT
keywords = kw1, kw2
url = https://github.com/belalhmedan90/my_python_ros2_pkg
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages=find:
python_requires = >=3.8
install_requires =
    setuptools

[options.entry_points]
console_scripts =
    do_something = my_python_ros2_pkg.nodes.first_script:main
    do_anotherthing = my_python_ros2_pkg.nodes.second_script:main

[options.package_data]
my_python_ros2_pkg =
    *.txt
    *.rst
    README.md
